# MaaS360-R

./: Cargo.toml
src/: auth_apis.rs  device_apis.rs  main.rs
