[package]
name = "maas360"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
